[package]
name = "fire-fasta"
version = "0.1.0"
edition = "2021"
authors = ["Johannes \"Cydhra\" Hengstler"]
description = "Ultra-fast, lazy, zero-copy Multi-FASTA parser."
readme = "readme.md"
repository = "https://github.com/Cydhra/fasta"
license = "MIT OR Apache-2.0"
keywords = ["bio", "fasta", "parser", "bioinformatics"]
categories = ["science"]

[dependencies]
memchr = "2"